[gd_scene load_steps=9 format=2]

[ext_resource path="res://environment/door_with_knob.png" type="Texture" id=1]
[ext_resource path="res://environment/knob.png" type="Texture" id=2]
[ext_resource path="res://scripts/DoorMiniGame.gd" type="Script" id=3]
[ext_resource path="res://audio/teleport.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 50.5657

[sub_resource type="CircleShape2D" id=2]
radius = 81.4714

[sub_resource type="CircleShape2D" id=3]
radius = 47.6818

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 637.29, 10 )

[node name="DoorMiniGame" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -45.8708 ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 644.993, 360.475 )
scale = Vector2( 1.94735, 2.17831 )
texture = ExtResource( 1 )

[node name="Knob" type="KinematicBody2D" parent="."]
position = Vector2( 1143.68, 309.185 )
scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Knob"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knob"]
position = Vector2( 1.72449, 2.70995 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Knob"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knob/Area2D"]
shape = SubResource( 2 )

[node name="Center" type="Area2D" parent="Knob"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Knob/Center"]
shape = SubResource( 3 )

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2( 636.345, -7.3143 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 4 )

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2( 641.871, 726.552 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 4 )

[node name="Left" type="StaticBody2D" parent="."]
position = Vector2( -4.64526, 460.464 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 4 )

[node name="Right" type="StaticBody2D" parent="."]
position = Vector2( 1281.16, 410.52 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 4 )

[node name="SoundTimer" type="Timer" parent="."]
one_shot = true

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="teleportSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0
[connection signal="tree_exited" from="." to="." method="_on_DoorMiniGame_tree_exited"]
[connection signal="input_event" from="Knob/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Knob/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Knob/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Knob/Center" to="." method="_on_Center_mouse_entered"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_SoundTimer_timeout"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_DialogTimer_timeout"]
[connection signal="finished" from="teleportSound" to="." method="_on_teleportSound_finished"]
